# quad_game

./: CMakeLists.txt
include/: entity.hpp  vec2.hpp
src/: entity.cpp  main.cpp
